# aruco-opencv-android

./: .gitignore  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: cameraOpenCV.cpp  opencv_shims.cpp  temp.cpp
app/src/main/cpp/include/opencv2/objdetect/: aruco_detector.hpp
app/src/main/java/com/tuielectronics/aruco_demo/: ArucoAnalyzer.kt  AxisPoints.kt  CameraProcess.kt  MainActivity.kt  Temp.kt
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
